k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotstar-clone
spec:
  type: ClusterIP
  selector:
    app: hotstar-clone
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
